[tool.poetry]
name = "kleeso"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
pytz = "^2021.1"
replit = "^2.0.0"
pynacl = "^1.4.0"
urllib3 = "^1.26.7"
translators = "^4.9.5"
bs4 = "^0.0.1"
pytube = "^12.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
